traces/bug_96.txt
src/fflib/AFunction2.cpp:87: error: DEAD_STORE
  The value written to &p (type int) is never used.
Showing all 1 steps of the trace


src/fflib/AFunction2.cpp:87:7: Write of unused value
85.    { 
86.         const OneOperator *w=0,*oo;
87.         int nn=0,p=-10000;
            ^
88.    /*     for (oo=this;oo;oo=oo->next)
89.           if (oo->pref>=p && oo->WithOutCast(at)) 
